--- a/src/aura/AS_Community_BasketItem/AS_Community_BasketItem.css
+++ b/src/aura/AS_Community_BasketItem/AS_Community_BasketItem.css
@@ -19,6 +19,7 @@
     border: 0.1rem solid gray;
     display: flex;
     padding: 0.2rem;
+    justify-content: space-between;
 }
 
 
@@ -52,6 +53,7 @@
 }
 
 .THIS .title {
+    max-width: 80%;
     margin-left: auto;
     margin-right: auto;
     font-size: 1.3rem;
