working pagination(has one small bug)

--- a/src/aura/AS_Community_ProductDetails/AS_Community_ProductDetails.css
+++ b/src/aura/AS_Community_ProductDetails/AS_Community_ProductDetails.css
@@ -76,6 +76,8 @@
 .THIS .description{
     font-size: 1rem;
     margin-right: 8rem;
+    text-align: justify;
+    text-justify: inter-word;
 }
 
 .THIS .buttons {
