--- a/src/aura/AS_Community_BasketView/AS_Community_BasketView.cmp
+++ b/src/aura/AS_Community_BasketView/AS_Community_BasketView.cmp
@@ -1,9 +1,5 @@
-
 <aura:component description="AS_Community_BasketView"
-                implements="flexipage:availableForAllPageTypes,
-                forceCommunity:availableForAllPageTypes,
-                flexipage:availableForRecordHome,
-                 force:appHostable"
+                implements="flexipage:availableForAllPageTypes,forceCommunity:availableForAllPageTypes,flexipage:availableForRecordHome,force:appHostable"
                 controller="AS_Community_BasketListController"
 >
 
@@ -44,4 +40,6 @@
         </div>
         <div aura:id="cart-is-empty" class="cartIsEmpty"><p>Basket is empty</p></div>
     </lightning:layout>
+    <c:AS_SendResultToast aura:id ="toastMaker"/>
+    <c:AS_SendErrorToast aura:id ="errorToastMaker"/>
 </aura:component>
