--- a/src/aura/AS_Community_OrderDetails/AS_Community_OrderDetails.cmp
+++ b/src/aura/AS_Community_OrderDetails/AS_Community_OrderDetails.cmp
@@ -9,37 +9,63 @@
                  force:hasRecordId"
                 controller="AS_Community_BasketListController"
 >
-    <aura:attribute name="opportunityProducts" type="Object[]"/>
-    <aura:attribute name="priceSum" type="String"/>
+    <aura:attribute name="orderItemWrappers" type="Object[]"/>
+    <aura:attribute name="OrderNumber" type="String"/>
+    <aura:handler event="c:AS_Community_OrderIdEvent" action="{!c.loadDetails}"/>
+
     <aura:handler name="init" value="{!this}" action="{!c.onInit}"/>
-    <aura:handler event="c:AS_Community_RequestSum_Event" action="{!c.handleEvent}"/>
     <lightning:notificationsLibrary aura:id="notification"/>
-    <lightning:layout horizontalAlign="center" verticalAlign="center" class="layoutContainer">
 
-        <div class='bView-container'>
+    <lightning:layout class="layout-container">
+        <div class="container">
+            <p>Order Details</p>
+            <lightning:card title="{!'Order nr: ' + v.OrderNumber}" iconName="standard:partner_fund_request">
+                <table class="slds-table slds-table_bordered slds-table_cell-buffer table-main">
+                    <thead>
+                    <tr class="slds-text-title_caps">
+                        <th scope="col">
+                            <div class="slds-truncate" title="Account name">Name</div>
+                        </th>
+                        <th scope="col">
+                            <div class="slds-truncate" title="Amount">Quantity</div>
+                        </th>
+                        <th scope="col">
+                            <div class="slds-truncate" title="Price">Price</div>
+                        </th>
+                        <th scope="col">
+                            <div class="slds-truncate" title="Total Amount">Total Amount</div>
+                        </th>
+                    </tr>
+                    </thead>
+                    <tbody class="table-body">
+                    <aura:iteration items="{!v.orderItemWrappers}" var="item" indexVar="index">
+                        <tr>
+                            <td data-label="Name">
+                                    {!item.productName}
+                            </td>
+                            <td data-label="Quantity">
+                                    {!item.quantity}
 
-            <div class="bView-header">
-                <p class="title">Order</p>
-            </div>
-            <aura:if isTrue="{!v.opportunityProducts.length > 0}">
-                <div class="bView-product-list">
+                            </td>
+                            <td data-label="Price">
+                            {!item.price} $
 
+                            </td>
+                            <td data-label="Total Amount">
+                            {!item.totalAmount} $
 
-                    <aura:iteration items="{!v.opportunityProducts}" end="{!v.opportunityProducts.length}" var="product">
-                        <c:AS_Community_OrderDetailsItem opportunityProduct = "{!product}" />
+                            </td>
+                        </tr>
                     </aura:iteration>
-                </div>
-
-                <div class="buttons-and-sum" aura:id="buyBtn">
-                    <div class="b-and-s-ctn">
-                        <div class="sum">
-                            <p>Sum:</p>
-                            <p>{!v.priceSum}</p>
-                            <p>$</p>
-                        </div>
-                    </div>
-                </div>
-            </aura:if>
+                    </tbody>
+                </table>
+            </lightning:card>
+            <div class="buttons">
+                <lightning:button variant="success" label="Complaint"/>
+            </div>
         </div>
+
     </lightning:layout>
+    <c:AS_SendResultToast aura:id ="toastMaker"/>
+    <c:AS_SendErrorToast aura:id ="errorToastMaker"/>
 </aura:component>
