--- a/src/aura/AS_Community_OrderDetails/AS_Community_OrderDetails.css
+++ b/src/aura/AS_Community_OrderDetails/AS_Community_OrderDetails.css
@@ -1,81 +1,52 @@
 /**
- * Created by tomas on 26.11.2020.
+ * Created by tomas on 03.12.2020.
  */
 .THIS {
-    flex-direction: column;
-    width: 100%;
-    height: 100%;
-}
-
-
-.THIS .bView-container {
-    width: 100%;
-    height: 100%;
     display: flex;
-    flex-direction: column;
     justify-content: center;
-
-}
-
-.THIS .bView-product-list {
-    display: flex;
-    flex-direction: column;
     align-items: center;
-    justify-content: center;
-    width: 90%;
-    margin-bottom: 5rem;
-
-}
-
-.THIS .cAS_Community_BasketItem {
-    margin-bottom: 1rem;
-}
-
-.THIS .bView-header {
+    flex-direction: column;
     width: 100%;
-    margin-bottom: 3rem;
+    height: 100%;
+    margin-top: 5rem;
+}
+
+.THIS .layout-container {
+    width: 100%;
+    height: 100%;
     display: flex;
-    margin-left: 5rem;
+    justify-content: center;
+    align-items: center;
 }
 
-
-.THIS .bView-header .title {
-    font-size: 2rem;
-    font-weight: bold;
-    color: gray;
+.THIS .container {
+    margin-right: 1rem;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    /*align-items: center;*/
 }
-
-.THIS .buttons-and-sum {
-    width: 80%;
+.THIS .buttons{
+    margin-top: 1rem;
     display: flex;
     justify-content: flex-end;
 }
 
-.THIS .b-and-s-ctn {
-    width: 30%;
-    display: flex;
-    justify-content: space-between;
+.THIS p{
+    margin-bottom: 1rem;
+    font-size: 1.4rem;
+    font-weight: bold;
+
 }
 
-.THIS .buttons {
-    width: 60%;
-    margin-right: 2rem;
-    font-size: 2rem;
+.THIS article {
+    /*width: 90%;*/
 }
 
-.THIS .buttons button {
+.THIS table {
     width: 100%;
 }
 
-.THIS .sum {
-    display: flex;
-    font-size: 2rem;
-}
 
-.THIS .hideElement {
-    display: none !important;
-}
-
-.THIS .showElement {
-    display: flex;
-}
