--- a/src/aura/AS_OrderListView/AS_OrderListView.css
+++ b/src/aura/AS_OrderListView/AS_OrderListView.css
@@ -20,11 +20,20 @@
 }
 
 .THIS .container {
-    width: 100%;
+    margin-left: 1rem;
+    width: 90%;
     height: 100%;
     display: flex;
+    flex-direction: column;
     justify-content: center;
-    align-items: center;
+    /*align-items: center;*/
+}
+
+.THIS p{
+    margin-bottom: 1rem;
+    font-size: 1.4rem;
+    font-weight: bold;
+
 }
 
 .THIS article {
