--- a/src/aura/AS_Community_OrderDetails/AS_Community_OrderDetails.cmp
+++ b/src/aura/AS_Community_OrderDetails/AS_Community_OrderDetails.cmp
@@ -1,6 +1,4 @@
-<!--
- - Created by tomas on 04.12.2020.
- -->
+
 
 <aura:component description="AS_Community_OrderDetails"
                 implements="flexipage:availableForAllPageTypes,
@@ -12,14 +10,48 @@
     <aura:attribute name="orderItemWrappers" type="Object[]"/>
     <aura:attribute name="OrderNumber" type="String"/>
     <aura:handler event="c:AS_Community_OrderIdEvent" action="{!c.loadDetails}"/>
-
+    <aura:attribute name="showNewComplainModal" type="Boolean"/>
+    <aura:attribute name="caseOrderNumber" type="Integer"/>
+    <aura:attribute name="caseProductName" type="String"/>
+    <aura:attribute name="caseSubject" type="String"/>
+    <aura:attribute name="caseMessage" type="String"/>
     <aura:handler name="init" value="{!this}" action="{!c.onInit}"/>
     <lightning:notificationsLibrary aura:id="notification"/>
 
+    <aura:if isTrue="{!v.showNewComplainModal}">
+
+        <div role="dialog" class="slds-modal slds-fade-in-open newCase-container">
+            <div class="slds-modal__container">
+                <header class="slds-modal__header">
+                    <h1 class="slds-text-heading--medium">Complaint</h1>
+                </header>
+                <lightning:layout multipleRows="true">
+                    <div class="popup-inputs">
+                        <lightning:input disabled="true" name="input6" value="{!v.OrderNumber}" label="Order Number"/>
+                        <lightning:input name="input6" disabled="true" value="{!v.caseProductName}" label="Product Name"/>
+                        <lightning:input name="input6" required="true" value="{!v.caseSubject}" label="Subject"/>
+                        <p>Information</p>
+                        <lightning:inputRichText value="{!v.caseMessage}"/>
+                    </div>
+                </lightning:layout>
+                <footer class="slds-modal__footer">
+                    <lightning:button name='No' label='No' onclick='{!c.closeModal}'/>
+                    <lightning:button variant="brand" name='Send' label='Yes' onclick='{!c.createCase}'/>
+                </footer>
+            </div>
+        </div>
+
+        <div class="slds-backdrop slds-backdrop--open"></div>
+    </aura:if>
     <lightning:layout class="layout-container">
         <div class="container">
+            <div class="title-and-btn">
             <p>Order Details</p>
-            <lightning:card title="{!'Order nr: ' + v.OrderNumber}" iconName="standard:partner_fund_request">
+<!--                <div class="buttons">-->
+<!--                    <lightning:button variant="brand-outline" label="Complaint"/>-->
+<!--                </div>-->
+            </div>
+                <lightning:card title="{!'Order nr: ' + v.OrderNumber}" iconName="standard:partner_fund_request">
                 <table class="slds-table slds-table_bordered slds-table_cell-buffer table-main">
                     <thead>
                     <tr class="slds-text-title_caps">
@@ -35,12 +67,16 @@
                         <th scope="col">
                             <div class="slds-truncate" title="Total Amount">Total Amount</div>
                         </th>
+                        <th scope="col">
+                            <div class="slds-truncate" title="Actions">Actions</div>
+                        </th>
                     </tr>
                     </thead>
                     <tbody class="table-body">
                     <aura:iteration items="{!v.orderItemWrappers}" var="item" indexVar="index">
-                        <tr>
-                            <td data-label="Name">
+                        <tr aura:id="row" onclick="{!c.tableRowClicked}" data-id="{!item.productName}" data-index="{!index}">
+
+                        <td data-label="Name">
                                     {!item.productName}
                             </td>
                             <td data-label="Quantity">
@@ -53,19 +89,68 @@
                             </td>
                             <td data-label="Total Amount">
                             {!item.totalAmount} $
-
+                            </td>
+                            <td>
+                                <lightning:button variant="brand-outline" label="Complaint" onclick="{!c.handleNewCaseModal}"/>
                             </td>
                         </tr>
                     </aura:iteration>
                     </tbody>
                 </table>
             </lightning:card>
-            <div class="buttons">
-                <lightning:button variant="success" label="Complaint"/>
-            </div>
         </div>
 
     </lightning:layout>
     <c:AS_SendResultToast aura:id ="toastMaker"/>
     <c:AS_SendErrorToast aura:id ="errorToastMaker"/>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 </aura:component>
