--- a/src/aura/AS_Complaints_ListView/AS_Complaints_ListView.cmp
+++ b/src/aura/AS_Complaints_ListView/AS_Complaints_ListView.cmp
@@ -6,7 +6,9 @@
                 access="global" controller="AS_Community_CaseController">
    <aura:attribute name="caseWrappers" type="Object[]"/>
     <aura:handler name="init" value="{!this}" action="{!c.onInit}"/>
+    <lightning:layout class="lightning-container">
 
+<div class="listView-container">
     <aura:if isTrue="{!v.caseWrappers.length > 0}">
         <aura:iteration items="{!v.caseWrappers}" end="{!v.caseWrappers.length}" var="wrapper">
             <c:AS_Community_CaseMini caseWrapper = "{!wrapper}" />
@@ -15,6 +17,10 @@
             <p class="empty-basket-p">There is no cases.</p>
         </aura:set>
     </aura:if>
+</div>
+
+    </lightning:layout>
+
     <c:AS_SendResultToast aura:id ="toastMaker"/>
     <c:AS_SendErrorToast aura:id ="errorToastMaker"/>
 </aura:component>
