--- a/src/aura/AS_Community_CaseMini/AS_Community_CaseMini.cmp
+++ b/src/aura/AS_Community_CaseMini/AS_Community_CaseMini.cmp
@@ -5,6 +5,7 @@
 <aura:component description="AS_Community_CaseMini">
 
     <aura:attribute type="Object" name="caseWrapper"/>
+    <aura:attribute type="Object[]" name="serviceResponses"/>
 
 
     <lightning:layout>
@@ -17,8 +18,23 @@
                 <p><b>Order: </b> {!v.caseWrapper.orderNumber}</p>
             </div>
             <div class="case-serviceResponse">
-                <p><b>Subject: </b> {!v.caseWrapper.subject}</p>
-                <p>{!v.caseWrapper.description}</p>
+                <div class="user-message">
+                    <p><b>Subject: </b> {!v.caseWrapper.subject}</p>
+                    <p>{!v.caseWrapper.description}</p>
+                </div>
+
+                <aura:if isTrue="{!v.caseWrapper.serviceResponseWrappers.length > 0}">
+
+                    <aura:iteration items="{!v.caseWrapper.serviceResponseWrappers}" end="{!v.caseWrapper.serviceResponseWrappers.length}" var="response">
+                        <div class="service-response">
+                            <p class="service-worker-credentials">{!response.owner}</p>
+                            <p class="service-response-date">{!response.createdAt}</p>
+                            <p class="service-response-description">{!response.message}</p>
+                        </div>
+                    </aura:iteration>
+
+                </aura:if>
+
             </div>
         </div>
     </lightning:layout>
