--- a/src/aura/AS_Community_CaseMini/AS_Community_CaseMini.css
+++ b/src/aura/AS_Community_CaseMini/AS_Community_CaseMini.css
@@ -2,12 +2,12 @@
  * Created by tomas on 07.12.2020.
  */
 .THIS {
+    margin-top: 1rem;
 }
 
 .THIS .container{
     background-color: #bebebe;
     width: 100%;
-    height: 10rem;
     border: 1px solid gray;
     display: flex;
     border-radius: 5px;
@@ -24,4 +24,28 @@
 .THIS .case-serviceResponse {
     padding: 0.5rem;
     width: 80%;
+}
+
+.THIS .user-message{
+    width: 100%;
+    border-bottom: 1px solid #838383;
+
+}
+
+.THIS .service-response {
+    margin-top: 1rem;
+    display: flex;
+    align-items: flex-end;
+    flex-direction: column;
+    border-bottom: 1px solid #838383;
+}
+
+.THIS .service-worker-credentials,
+.THIS .service-response-date {
+    font-size: 1rem;
+    font-weight: bold;
+}
+
+.THIS .service-response-description{
+    margin-top: 0.5rem;
 }
