--- a/src/aura/AS_Community_OrderDetails/AS_Community_OrderDetails.css
+++ b/src/aura/AS_Community_OrderDetails/AS_Community_OrderDetails.css
@@ -10,6 +10,45 @@
     height: 100%;
     margin-top: 5rem;
 }
+.THIS .newCase-container {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+
+.THIS .slds-modal__container{
+    max-width: 60rem;
+    width: 60rem;
+    height: 70%;
+}
+
+.THIS .popup-inputs{
+    width: 100%;
+    height: 100%;
+    padding: 1rem;
+}
+
+.THIS .slds-wrap {
+    display: flex;
+    /*flex-direction: column;*/
+    background-color: white;
+    align-items: center;
+    align-items: flex-start;
+}
+
+.THIS .slds-form-element{
+    width: 100%;
+}
+
+.THIS .popup-inputs p{
+    margin-top: 1rem;
+}
+
+
+
+
 
 .THIS .layout-container {
     width: 100%;
@@ -29,9 +68,9 @@
     /*align-items: center;*/
 }
 .THIS .buttons{
-    margin-top: 1rem;
     display: flex;
     justify-content: flex-end;
+    margin-bottom: 1rem;
 }
 
 .THIS p{
@@ -47,6 +86,13 @@
 
 .THIS table {
     width: 100%;
+}
+
+.THIS .title-and-btn {
+    display: flex;
+    width: 100%;
+    justify-content: space-between;
+    align-items: center;
 }
 
 
