--- a/src/aura/AS_Complaints_ListView/AS_Complaints_ListView.css
+++ b/src/aura/AS_Complaints_ListView/AS_Complaints_ListView.css
@@ -1,5 +1,16 @@
 /**
  * Created by tomas on 07.12.2020.
  */
-.THIS {
+
+.THIS .lightning-container{
+    width: 100%;
+    height: 100%;
+}
+
+.THIS .listView-container {
+    margin-left: auto;
+    margin-right: auto;
+    width: 100%;
+    height: 100%;
+    margin-bottom: 5rem;
 }
